fixed header font sizes on mobile

--- a/web/assets/css/partials/_header.scss
+++ b/web/assets/css/partials/_header.scss
@@ -14,6 +14,7 @@ body {
             @extend .wrapper;
 
             .mobile {
+                color: $Medium_Grey;
                 float: left;
                 display: none;
                 margin-right: 15px;
@@ -35,7 +36,7 @@ body {
                 margin-right: 20px;
 
                 a {
-                    color: #000000;
+                    color: $Medium_Grey;
                     font-size: 26px;
                     line-height: 56px;
 
@@ -47,6 +48,10 @@ body {
                         @include respond-to(tablets) {
                             display: none;
                         }
+                    }
+
+                    @include respond-to(phablets) {
+                        font-size: 22px;
                     }
                 }
             }
